Criando o endpoint de atualização de sala
